--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,14 @@
 /*STYLE.CSS*/
 
+.homeLink a:link,
+a:visited,
+a:hover,
+a:active {
+  color: #000000;
+}
+
+
+
 #header img {
   max-width: 60px;
   margin: 0 0 0 5px;
@@ -49,7 +58,7 @@
   text-decoration: none;
   display: block;
   padding: 15px 45px;
-  font-family: sans-serif;
+  font-family: "Comic Sans MS", cursive, sans-serif;
   font-weight: bold;
   font-size: 18px;
   position: relative;
@@ -107,4 +116,22 @@
 
 #navBar ul li.active a::before {
   width: 100%;
+}
+
+.mainContent {
+  padding: 10px 30px 0;
+  font-family: "Comic Sans MS", cursive, sans-serif;
+}
+
+.mainContent h2 {
+}
+
+.mainContent p {
+  text-size: 16px;
+}
+
+footer {
+  font-family: "Comic Sans MS", cursive, sans-serif;
+  margin: 100px 0 40px 0;
+  padding: 0 30px;
 }
