--- a/css/style.css
+++ b/css/style.css
@@ -5,27 +5,6 @@
   margin: 0;
 }
 
-.homeLink a:link,
-a:visited,
-a:hover,
-a:active {
-  color: #000000;
-}
-
-.logIn a:link,
-a:visited,
-a:hover,
-a:active {
-  color: #000000;
-}
-
-.signUp a:link,
-a:visited,
-a:hover,
-a:active {
-  color: #000000;
-}
-
 .logIn,
 .signUp {
   margin: 15px;
@@ -53,6 +32,14 @@ a:active {
   margin: 5.5px 20px;
   vertical-align: top;
   font-family: "Comic Sans MS", cursive, sans-serif;
+}
+
+#header a,
+a:link,
+a:visited,
+a:hover,
+a:active {
+  color: #000000;
 }
 
 #navBar {
