--- a/css/style.css
+++ b/css/style.css
@@ -35,10 +35,10 @@
 }
 
 #header a,
-a:link,
-a:visited,
-a:hover,
-a:active {
+#header a:link,
+#header a:visited,
+#header a:hover,
+#header a:active {
   color: #000000;
 }
 
