JavaScript for Log In/Sign Up Page
- JavaScript for Log In and Sign Up Page Implemented
- Navigation modified

--- a/css/logInForm.css
+++ b/css/logInForm.css
@@ -1,12 +1,10 @@
-/*SIGNUPFORM.CSS*/
+/*LOGINFORM.CSS*/
 
-#signUpForm * {
+#logInForm * {
   padding: 0;
   margin: 10px 0 10px 5px;
 }
 
-#firstNameError,
-#lastNameError,
 #emailError,
 #passwordError {
   color: red;
