--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,13 @@
   display: inline;
 }
 
+#carousel {
+  display: block;
+  max-width: 50%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 #submitButton {
   margin: 20px 0 0 60px;
 }
@@ -45,6 +52,7 @@
 #navBar {
   background: #48a3a6;
   width: auto;
+  margin: 0px 80px;
   text-align: center;
 }
 
