--- a/css/style.css
+++ b/css/style.css
@@ -143,6 +143,10 @@
   font-size: 16px;
 }
 
+#orderForm input {
+  padding: 0;
+}
+
 footer {
   font-family: "Comic Sans MS", cursive, sans-serif;
   margin: 100px 0 40px 0;
