--- a/css/style.css
+++ b/css/style.css
@@ -5,8 +5,7 @@
   margin: 0;
 }
 
-.logIn,
-.signUp {
+.rightHeader {
   margin: 15px;
   float: right;
   font-family: "Comic Sans MS", cursive, sans-serif;
@@ -14,6 +13,11 @@
 
 .inputPair * {
   display: inline;
+  vertical-align: middle;
+}
+
+.inputPair option {
+  display: block;
 }
 
 .createdBy {
